--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "pretest": "jshint .",
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js --watch server --watch common --ext js,json "
+    "dev": "FAKEDATA=1 nodemon server/server.js --watch server --watch common --ext js,json "
   },
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
+    "faker": "^2.1.2",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
